fix added #desc to #boxes to remove whitespace

--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 *{
     margin: 0px;
     padding: 0px;
-    box-sizing: border-box;
+   
     
 }
 
@@ -72,112 +72,98 @@ nav{
 /* ------------------------------------------------------------------- 
 * ## Boxes
 * ------------------------------------------------------------------- */
+#boxes {
+  top: 1%;
+  background-color: #222;
+}
+#boxes .box{
+  float:left;
+  text-align: center; 
+  width:25%;
+  
+}
 
-#boxes{
-    margin-top:20px;
-  }
-  
-  #boxes .box{
-    float:left;
-    text-align: center;
-    width:25%;
-    
-  }
-  
-  #boxes .box img{
-    width:70px;
-  }
-  
-  #box-contact h3  {
-    text-align:left;
-    font-size: 24px;
-  }
-  
-  #box-contact p {
-    text-align:left;
-  }
-  
-  #box-contact {
-    background-color: #E9E9EA;
-  }
+#boxes .box img{
+  width:70px;
+}
 
-  #boxes .button {
-    text-align: center;
-  }
+#box-contact h3  {
+  text-align:left;
+  font-size: 24px;
+}
 
-  /* description */
-  #desc{
-    text-align:center;
-    padding:15px;
-    color:#ffffff;
-    background:#35424a
-  }
+#box-contact p {
+  text-align:left;
+}
 
+#box-contact {
+  background-color: #E9E9EA;
+}
 
+#boxes .button {
+  text-align: center;
+}
 
+/* --------------------------------------------------- */
 
+.wrapper{
+  margin-top: 10%;
+}
 
+.wrapper h1{
+  font-size: 52px;
+  margin-bottom: 60px;
+  text-align: center;
+}
 
-  
-  .wrapper{
-    margin-top: 10%;
-  }
-  
-  .wrapper h1{
-    font-family: 'Allura', cursive;
-    font-size: 52px;
-    margin-bottom: 60px;
-    text-align: center;
-  }
-  
-  .team{
-    display: flex;
-    justify-content: center;
-    width: auto;
-    text-align: center;
-    flex-wrap: wrap;
-  }
-  
-  .team .team_member{
-    background: #fff;
-    margin: 5px;
-    margin-bottom: 50px;
-    width: 300px;
-    padding: 20px;
-    line-height: 20px;
-    color: #8e8b8b;  
-    position: relative;
-  }
-  
-  .team .team_member h3{
-    color: #81c644;
-    font-size: 26px;
-    margin-top: 50px;
-  }
-  
-  .team .team_member p.role{
-    color: #ccc;
-    margin: 12px 0;
-    font-size: 12px;
-    text-transform: uppercase;
-  }
-  
-  .team .team_member .team_img{
-    position: absolute;
-    top: -50px;
-    left: 50%;
-    transform: translateX(-50%);
-    width: 100px;
-    height: 100px;
-    border-radius: 50%;
-    background: #fff;
-  }
-  
-  .team .team_member .team_img img{
-    width: 100px;
-    height: 100px;
-    padding: 5px;
-  }
+.team{
+  display: flex;
+  justify-content: center;
+  width: auto;
+  text-align: center;
+  flex-wrap: wrap;
+}
+
+.team .team_member{
+  background: #fff;
+  margin: 5px;
+  margin-bottom: 50px;
+  width: 300px;
+  padding: 20px;
+  line-height: 20px;
+  color: #8e8b8b;  
+  position: relative;
+}
+
+.team .team_member h3{
+  color: #81c644;
+  font-size: 26px;
+  margin-top: 50px;
+}
+
+.team .team_member p.role{
+  color: #ccc;
+  margin: 12px 0;
+  font-size: 12px;
+  text-transform: uppercase;
+}
+
+.team .team_member .team_img{
+  position: absolute;
+  top: -50px;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  background: #fff;
+}
+
+.team .team_member .team_img img{
+  width: 100px;
+  height: 100px;
+  padding: 5px;
+}
 
 
 
@@ -197,7 +183,6 @@ footer {
 section {
   width: 100%;
   display: inline-block;
-
   height: 50vh;
   text-align: center;
   font-size: 22px;
@@ -206,38 +191,38 @@ section {
 }
 
 .footer-distributed{
-	background: #666;
-	box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.12);
-	box-sizing: border-box;
-	width: 100%;
-	text-align: left;
-	font: bold 16px sans-serif;
-	padding: 55px 50px;
+  background: #666;
+  box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.12);
+  box-sizing: border-box;
+  width: 100%;
+  text-align: left;
+  font: bold 16px sans-serif;
+  padding: 55px 50px;
 }
 
 .footer-distributed .footer-left,
 .footer-distributed .footer-center,
 .footer-distributed .footer-right{
-	display: inline-block;
-	vertical-align: top;
+  display: inline-block;
+  vertical-align: top;
 }
 
 /* Footer left */
 
 .footer-distributed .footer-left{
-	width: 40%;
+  width: 40%;
 }
 
 /* The company logo */
 
 .footer-distributed h3{
-	color:  #ffffff;
-	font: normal 36px 'Open Sans', cursive;
-	margin: 0;
+  color:  #ffffff;
+  font: normal 36px 'Open Sans', cursive;
+  margin: 0;
 }
 
 .footer-distributed h3 span{
-	color:  lightseagreen;
+  color:  lightseagreen;
 }
 
 /* Footer links */
